examples/test/testpolicy13413.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13413
  namespace: namespace166
spec:
  podSelector:
    matchLabels:
      key14: value23
      key10: value8
      key39: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value30
          key46: value6
      podSelector:
        matchLabels:
          key29: value22
          key0: value49
          key41: value32
